add tutorial and make some changes in results

--- a/Index.html
+++ b/Index.html
@@ -20,6 +20,18 @@
         <input type="text" name="number" id="num" conType="RTI">
         <button id="convert">Convert</button>
         <div class="history"></div>
+        <div class="tutorial">
+          <h4>Roman Numbers</h4>
+          <div class="text">
+            <span>I</span>
+            <span>V</span>
+            <span>X</span>
+            <span>L</span>
+            <span>C</span>
+            <span>D</span>
+            <span>M</span>
+          </div>
+        </div>
       </form>
     </section>
     <script src="script.js"></script>
