add sweet alert & make result logic

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
           <option value="ITR">Integer to roman</option>
         </select>
         <input type="text" name="number" id="num" conType="RTI">
-        <button id="convert">Convert</button>
+        <div class="buttons">  
+          <button id="convert">Convert</button>
+          <button id="clear">Clear history</button>
+        </div>
         <div class="history"></div>
         <div class="tutorial">
           <h4>Roman Numbers</h4>
@@ -34,6 +37,7 @@
         </div>
       </form>
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="script.js"></script>
   </body>
 </html>
